Fix layout issue with body height, amorphous data & trying to make the part obtention card clearer.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -40,9 +40,11 @@
 html, body{
 	margin: 0;
 	padding: 0;
-	min-height: 100%;
 }
 body{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 	background-image: linear-gradient(60deg, #29323c 0%, #485572 100%);
 	font-family: "Nunito Variable", sans-serif;
 	font-weight: 700;
